--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Nerfies: Deformable Neural Radiance Fields</h1>
+          <h1 class="title is-1 publication-title">Augmented Mass-Spring model for Real-Time Dense Hair Simulation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://cemse.kaust.edu.sa/profiles/jorge-alejandro-amador-herrera">Jorge Alejandro Amador Herrera</a><sup>1</sup>,</span>
@@ -101,19 +101,21 @@
               <a href="https://zhixinshu.github.io/">Zhixin Shu</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://cs.yale.edu/homes/che/">Chengan He</a><sup>2</sup>,
+              <a href="https://cs.yale.edu/homes/che/">Chengan He</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://storage.googleapis.com/pirk.io/index.html">Sören Pirk</a><sup>1,2</sup>,
+              <a href="https://storage.googleapis.com/pirk.io/index.html">Sören Pirk</a><sup>4</sup>,
             </span>
             <span class="author-block">
-              <a href="https://dmichels.de/">Dominik L. Michels</a><sup>2</sup>
+              <a href="https://dmichels.de/">Dominik L. Michels</a><sup>1</sup>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>University of Washington,</span>
-            <span class="author-block"><sup>2</sup>Google Research</span>
+            <span class="author-block"><sup>1</sup>KAUST,</span>
+            <span class="author-block"><sup>2</sup>Adobe Research,</span>
+            <span class="author-block"><sup>3</sup>Yale University,</span>
+            <span class="author-block"><sup>4</sup>CAU</span>
           </div>
 
           <div class="column has-text-centered">
