--- a/index.html
+++ b/index.html
@@ -175,22 +175,23 @@
     </div>
     <!--/ Animation. -->
 
+  </div>
+</section>
 
-    <!-- Concurrent Work. -->
-    <div class="columns is-centered">
-      <div class="column is-full-width">
-        <h2 class="title is-3">Related Projects</h2>
+<section class="section" id="Related">
+  <!-- Concurrent Work. -->
+  <div class="columns is-centered">
+    <div class="column is-full-width">
+      <h2 class="title is-3">Related Projects</h2>
 
-        <div class="content has-text-justified">
-          <p>
-            1. Perm: A Parametric Representation for Multi-Style 3D Hair Modeling <a href="https://cs.yale.edu/homes/che/projects/perm/">[Project]</a>
-          </p>
-        </div>
+      <div class="content has-text-justified">
+        <p>
+          1. Perm: A Parametric Representation for Multi-Style 3D Hair Modeling <a href="https://cs.yale.edu/homes/che/projects/perm/">[Project]</a>
+        </p>
       </div>
     </div>
-    <!--/ Concurrent Work. -->
-
   </div>
+  <!--/ Concurrent Work. -->
 </section>
 
 
@@ -204,15 +205,6 @@
 
 <footer class="footer">
   <div class="container">
-    <div class="content has-text-centered">
-      <a class="icon-link"
-         href="./static/videos/nerfies_paper.pdf">
-        <i class="fas fa-file-pdf"></i>
-      </a>
-      <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="content">
