--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 
 <section class="section" id="Related">
   <!-- Concurrent Work. -->
-  <div class="columns is-centered">
-    <div class="column is-full-width">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
       <h2 class="title is-3">Related Projects</h2>
 
       <div class="content has-text-justified">
