--- a/index.html
+++ b/index.html
@@ -143,16 +143,14 @@
 
 <section class="section" id="Related">
   <!-- Concurrent Work. -->
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3">Related Projects</h2>
+  <div class="container is-max-desktop content">
+      <h2 class="title">Related Projects</h2>
 
       <div class="content has-text-justified">
         <p>
           1. Perm: A Parametric Representation for Multi-Style 3D Hair Modeling <a href="https://cs.yale.edu/homes/che/projects/perm/">[Project]</a>
         </p>
       </div>
-    </div>
   </div>
   <!--/ Concurrent Work. -->
 </section>
