--- a/index.html
+++ b/index.html
@@ -123,15 +123,9 @@
           </p>
         </div>
         <div class="content has-text-centered">
-          <video id="replay-video"
-                 controls
-                 muted
-                 preload
-                 playsinline
-                 width="75%">
-            <source src="./static/videos/replay.mp4"
-                    type="video/mp4">
-          </video>
+          <img src="./static/images/diagram.png" 
+               alt="Overview of Nerfies rendering"
+               style="width: 75%;">
         </div>
 
       </div>
