--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <script src="./static/js/bulma-carousel.min.js"></script>
   <script src="./static/js/bulma-slider.min.js"></script>
   <script src="./static/js/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
 
@@ -118,8 +119,9 @@
 
         <div class="content has-text-justified">
           <p>
-            Using <span class="dnerf">Nerfies</span>, you can re-render a video from a novel
-            viewpoint such as a stabilized camera by playing back the training deformations.
+            We consider the basic edge, bending, and torsion springs, for which an uniform spring constant $\kappa_{L}$ is used, as well 
+            as a weakly interaction with a ghost rest-shape via one-way springs that connect each particle with their corresponding 
+            ghost in the rest configuration
           </p>
         </div>
         <div class="content has-text-centered">
