--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         <div class="content has-text-justified">
           <p>
-            We consider the basic edge, bending, and torsion springs, for which an uniform spring constant $\kappa_{L}$ is used, as well 
+            We consider the basic edge, bending, and torsion springs, for which an uniform spring constant \( \kappa_{L} \) is used, as well 
             as a weakly interaction with a ghost rest-shape via one-way springs that connect each particle with their corresponding 
             ghost in the rest configuration
           </p>
