--- a/index.html
+++ b/index.html
@@ -159,10 +159,12 @@
         Perm: A Parametric Representation for Multi-Style 3D Hair Modeling. 
         Learn more about this project <a href="https://cs.yale.edu/homes/che/projects/perm/">here</a>.
       </p>
-      <video autoplay loop controls width="15%">
+      <div class="content has-text-centered">
+      <video autoplay loop controls width="55%">
         <source src="./static/videos/wig.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
+      </div>
     </div>
 
     <!-- Subsection 2 -->
