--- a/index.html
+++ b/index.html
@@ -152,9 +152,25 @@
     <!-- Main Section Title -->
     <h2 class="title is-3">Experiments</h2>
 
+    <!-- Subsection 2 -->
+    <div class="content has-text-justified">
+      <h3 class="title is-4">Ablation Studies</h3>
+      <p>
+        We conducted real-time simulations to test the robustness of our model under dynamic conditions. 
+      </p>
+      <div class="columns is-centered">
+        <div class="column is-half has-text-centered">
+          <img src="./static/images/single_strand_comparison.png" alt="Image 1" width="80%">
+        </div>
+        <div class="column is-half has-text-centered">
+          <img src="./static/images/wisp_divergence.png" alt="Image 2" width="80%">
+        </div>
+      </div>
+    </div>
+
     <!-- Subsection 1 -->
     <div class="content has-text-justified">
-      <h3 class="title is-4">Curly Wig</h3>
+      <h3 class="title is-4">Simulation Fidelity</h3>
       <p>
         Perm: A Parametric Representation for Multi-Style 3D Hair Modeling. 
         Learn more about this project <a href="https://cs.yale.edu/homes/che/projects/perm/">here</a>.
@@ -167,23 +183,50 @@
       </div>
     </div>
 
-    <!-- Subsection 2 -->
+    <!-- Subsection 3 -->
     <div class="content has-text-justified">
-      <h3 class="title is-4">Experiment 2: Real-Time Simulation</h3>
+      <h3 class="title is-4">Object Interaction</h3>
       <p>
-        We conducted real-time simulations to test the robustness of our model under dynamic conditions. 
-        View the results <a href="https://example.com/simulation">here</a>.
+        The rendering pipeline experiment focuses on generating photorealistic hair from our 3D models.
+        Check out the <a href="https://example.com/rendering">detailed report</a>.
       </p>
+      <div class="content has-text-centered">
+        <video autoplay loop controls width="55%">
+          <source src="./static/videos/hands.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        </div>
     </div>
 
     <!-- Subsection 3 -->
     <div class="content has-text-justified">
-      <h3 class="title is-4">Experiment 3: Rendering Pipeline</h3>
+      <h3 class="title is-4">Non-Standard Settings</h3>
       <p>
         The rendering pipeline experiment focuses on generating photorealistic hair from our 3D models.
         Check out the <a href="https://example.com/rendering">detailed report</a>.
       </p>
     </div>
+
+    <!-- Subsection 3 -->
+    <div class="content has-text-justified">
+      <h3 class="title is-4">Extreme Forces</h3>
+      <p>
+        The rendering pipeline experiment focuses on generating photorealistic hair from our 3D models.
+        Check out the <a href="https://example.com/rendering">detailed report</a>.
+      </p>
+    </div>
+
+    <!-- Subsection 3 -->
+    <div class="content has-text-justified">
+      <h3 class="title is-4">Digital Grooming</h3>
+      <p>
+        The rendering pipeline experiment focuses on generating photorealistic hair from our 3D models.
+        Check out the <a href="https://example.com/rendering">detailed report</a>.
+      </p>
+    </div>
+
+
+
   </div>
 </section>
 
