--- a/index.html
+++ b/index.html
@@ -205,6 +205,30 @@
         The rendering pipeline experiment focuses on generating photorealistic hair from our 3D models.
         Check out the <a href="https://example.com/rendering">detailed report</a>.
       </p>
+      <div class="video-container" style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
+        <div class="video-item">
+          <video autoplay loop muted controls width="100%">
+            <source src="./static/videos/long_beard.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <div class="video-item">
+          <video autoplay loop muted controls width="100%">
+            <source src="./static/videos/moustache.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
+      <p>
+        The rendering pipeline experiment focuses on generating photorealistic hair from our 3D models.
+        Check out the <a href="https://example.com/rendering">detailed report</a>.
+      </p>
+      <div class="content has-text-centered">
+        <video autoplay loop controls width="55%">
+          <source src="./static/videos/assymetric.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        </div>
     </div>
 
     <!-- Subsection 3 -->
@@ -214,14 +238,19 @@
         The rendering pipeline experiment focuses on generating photorealistic hair from our 3D models.
         Check out the <a href="https://example.com/rendering">detailed report</a>.
       </p>
+      <div class="content has-text-centered">
+        <video autoplay loop controls width="55%">
+          <source src="./static/videos/roller.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        </div>
     </div>
 
     <!-- Subsection 3 -->
     <div class="content has-text-justified">
-      <h3 class="title is-4">Digital Grooming</h3>
+      <h3 class="title is-4">Demo</h3>
       <p>
-        The rendering pipeline experiment focuses on generating photorealistic hair from our 3D models.
-        Check out the <a href="https://example.com/rendering">detailed report</a>.
+        Show grooming and Wukong
       </p>
     </div>
 
