--- a/index.html
+++ b/index.html
@@ -35,50 +35,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">Augmented Mass-Spring model for Real-Time Dense Hair Simulation</h1>
-          <div class="is-size-5 publication-authors">
-            <span class="author-block">
-              <a href="https://cemse.kaust.edu.sa/profiles/jorge-alejandro-amador-herrera">Jorge Alejandro Amador Herrera</a><sup>1</sup>,</span>
-            <span class="author-block">
-              <a href="https://zhouyisjtu.github.io/">Yi Zhou</a><sup>2</sup>,</span>
-            <span class="author-block">
-              <a href="https://www.sunxin.name/">Xin Sun</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://zhixinshu.github.io/">Zhixin Shu</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://cs.yale.edu/homes/che/">Chengan He</a><sup>3</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://storage.googleapis.com/pirk.io/index.html">Sören Pirk</a><sup>4</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://dmichels.de/">Dominik L. Michels</a><sup>1</sup>
-            </span>
-          </div>
-
-          <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>KAUST,</span>
-            <span class="author-block"><sup>2</sup>Adobe Research,</span>
-            <span class="author-block"><sup>3</sup>Yale University,</span>
-            <span class="author-block"><sup>4</sup>CAU</span>
-          </div>
-
-          <div class="column has-text-centered">
-            <div class="publication-links">
-              <!-- Code Link. -->
-              <span class="link-block">
-                <a href="https://github.com/"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-github"></i>
-                  </span>
-                  <span>Code</span>
-                  </a>
-              </span>
-            </div>
-
-          </div>
+          <h1 class="title is-1">#10539</h1>
         </div>
       </div>
     </div>
@@ -258,29 +215,6 @@
 
 
 
-  </div>
-</section>
-
-
-<section class="section" id="Related">
-  <!-- Concurrent Work. -->
-  <div class="container is-max-desktop content">
-      <h2 class="title is-3">Related Projects</h2>
-
-      <div class="content has-text-justified">
-        <p>
-          1. Perm: A Parametric Representation for Multi-Style 3D Hair Modeling <a href="https://cs.yale.edu/homes/che/projects/perm/">[Project]</a>
-        </p>
-      </div>
-  </div>
-  <!--/ Concurrent Work. -->
-</section>
-
-
-<section class="section" id="BibTeX">
-  <div class="container is-max-desktop content">
-    <h2 class="title">BibTeX</h2>
-    <pre><code>Coming soon</code></pre>
   </div>
 </section>
 
