--- a/index.html
+++ b/index.html
@@ -237,6 +237,15 @@
         <p>
         Finally, we demonstrate the simulation of hair and facial hair movements for <a href="https://www.heishenhua.com/">Wukong</a>
         </p>
+
+        <div class="content has-text-centered">
+          <video autoplay loop controls width="55%">
+            <source src="./static/videos/wukong.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+          </div>
+
+
     </div>
 
 
