--- a/index.html
+++ b/index.html
@@ -239,11 +239,14 @@
         </p>
 
         <div class="content has-text-centered">
-          <video autoplay loop controls width="55%">
+        <div class="media-grid">
+          <video autoplay muted controls class="media-item" width="400">
             <source src="./static/videos/wukong.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
-          </div>
+          <img src="./static/images/wukong.jpg" alt="Example Image" width="400" class="media-item">
+        </div>
+        </div>
 
 
     </div>
