--- a/index.html
+++ b/index.html
@@ -159,10 +159,13 @@
         In this scenario, the hair loses its overall structure and becomes frizzy during interpolation with the neural approach, even before any interaction with the object occurs. This issue arises because the data-driven method does not consider changes in the rest-shape configuration of the hair.
         
         <div class="content has-text-centered">
-          <video autoplay loop controls width="55%">
-            <source src="./static/videos/sphere.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+          <div class="media-grid">
+            <img src="./static/images/blowout_wig.png" alt="Example Image" width="200" class="media-item">
+            <video autoplay muted controls class="media-item" width="500">
+              <source src="./static/videos/sphere.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </div>
           </div>
     
       </div>
