--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href=""
+                  <a href="https://arxiv.org/pdf/2412.17144"
                      class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                         <i class="fas fa-file-pdf"></i>
@@ -77,7 +77,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href=""
+                  <a href="https://arxiv.org/abs/2412.17144"
                      class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                         <i class="ai ai-arxiv"></i>
@@ -87,7 +87,7 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href=""
+                  <a href="https://github.com/AgrosAmad/Digital-Salon"
                      class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                         <i class="fab fa-github"></i>
